[gd_scene load_steps=4 format=3 uid="uid://bx3qmlit7do7s"]

[ext_resource type="Script" uid="uid://b28pgvdrq41qq" path="res://desktop/window/window_bar/window_bar.gd" id="1_n33ip"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n33ip"]
bg_color = Color(0.139198, 0.223356, 0.283347, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgj8h"]
bg_color = Color(0.771577, 0, 0.0993248, 1)

[node name="WindowBar" type="MarginContainer"]
offset_right = 512.0
offset_bottom = 32.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_n33ip")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DragBar" type="PanelContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n33ip")

[node name="WindowTitle" type="RichTextLabel" parent="HBoxContainer/DragBar"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
text = "human, i remember you're compter pogram"
fit_content = true
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_lgj8h")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_lgj8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_lgj8h")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lgj8h")
theme_override_styles/normal = SubResource("StyleBoxFlat_lgj8h")
text = "X"
